Completed Multilayer Perceptron algorithm and modified normalizing in nb3

--- a/nb3_extracting_cl.ipynb
+++ b/nb3_extracting_cl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +157,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2732\n"
+     ]
     }
    ],
    "source": [
@@ -171,7 +178,6 @@
     "    \n",
     "    # Extract filename and category\n",
     "    category_str = row[\"class_name\"]\n",
-    "    \n",
     "    \n",
     "    # Loop through metadata comparing the categories\n",
     "    if category_str in categories:\n",
@@ -195,14 +201,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2732\n",
+      "dog_bark 1000\n",
+      "car_horn 429\n",
+      "gun_shot 374\n",
+      "siren 929\n",
+      "374\n",
+      "374\n",
+      "374\n",
+      "374\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>class_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>[-395.19397, 143.10742, 18.418566, 1.2344542, ...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>[-409.3987, 85.58972, 18.60112, -1.9504186, -2...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>[-208.6443, 85.23191, -41.25806, 15.916695, -3...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>[-391.55826, 74.2019, -64.09721, -19.767124, 1...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>[-659.502, 58.18304, -9.349158, -9.586478, -7....</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1491</td>\n",
+       "      <td>[-332.87567, 149.99313, -36.90327, 33.533695, ...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1492</td>\n",
+       "      <td>[-503.34763, 173.59569, -21.291695, 31.144808,...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1493</td>\n",
+       "      <td>[-420.78137, 144.98412, -45.337044, 14.3555155...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1494</td>\n",
+       "      <td>[-489.23328, 122.28847, -52.489998, 8.501058, ...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1495</td>\n",
+       "      <td>[-283.6206, 182.47198, -46.0279, 14.188629, -2...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1496 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                feature class_label\n",
+       "0     [-395.19397, 143.10742, 18.418566, 1.2344542, ...    dog_bark\n",
+       "1     [-409.3987, 85.58972, 18.60112, -1.9504186, -2...    dog_bark\n",
+       "2     [-208.6443, 85.23191, -41.25806, 15.916695, -3...    dog_bark\n",
+       "3     [-391.55826, 74.2019, -64.09721, -19.767124, 1...    dog_bark\n",
+       "4     [-659.502, 58.18304, -9.349158, -9.586478, -7....    dog_bark\n",
+       "...                                                 ...         ...\n",
+       "1491  [-332.87567, 149.99313, -36.90327, 33.533695, ...       siren\n",
+       "1492  [-503.34763, 173.59569, -21.291695, 31.144808,...       siren\n",
+       "1493  [-420.78137, 144.98412, -45.337044, 14.3555155...       siren\n",
+       "1494  [-489.23328, 122.28847, -52.489998, 8.501058, ...       siren\n",
+       "1495  [-283.6206, 182.47198, -46.0279, 14.188629, -2...       siren\n",
+       "\n",
+       "[1496 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Normalize the dataframe such that there are the same number of files per class_label\n",
+    "# This ensures that no one category has an advantage when the model is being trained\n",
+    "\n",
+    "print(featuresdf.class_label.count()) # 2732\n",
+    "\n",
+    "# Create dictionary of dataframes\n",
+    "frames = {}\n",
+    "categories = ['dog_bark', 'car_horn', 'gun_shot', 'siren']\n",
+    "\n",
+    "arr_Size = []\n",
+    "\n",
+    "for label in categories:\n",
+    "    frames[label] = featuresdf[featuresdf['class_label'] == label]\n",
+    "    # Extract shape and get number of rows\n",
+    "    rNc = frames[label].shape\n",
+    "    # Gets number of rows\n",
+    "    arr_Size.append(rNc[0])\n",
+    "    print(label, rNc[0])\n",
+    "\n",
+    "# Take the minimum size from size array\n",
+    "minSize = min(arr_Size)\n",
+    "\n",
+    "# Utilize minimum size to slice rows such that only the minimum size is maintained\n",
+    "for label in frames:\n",
+    "    frames[label] = frames[label].sample(minSize)\n",
+    "    print(frames[label].shape[0])\n",
+    "    \n",
+    "# Concatenate all dataframes in dictionary of dataframes\n",
+    "# Place the concatenated frame back in featuresdf\n",
+    "# Reindex\n",
+    "result = pd.concat(frames)\n",
+    "#display(type(result))\n",
+    "features_temp = pd.DataFrame()\n",
+    "features_temp = result[[\"feature\", \"class_label\"]]\n",
+    "\n",
+    "# Reindex features_temp\n",
+    "features_temp = features_temp.reset_index(drop=True)\n",
+    "display(features_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>class_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>[-395.19397, 143.10742, 18.418566, 1.2344542, ...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>[-409.3987, 85.58972, 18.60112, -1.9504186, -2...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>[-208.6443, 85.23191, -41.25806, 15.916695, -3...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>[-391.55826, 74.2019, -64.09721, -19.767124, 1...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>[-659.502, 58.18304, -9.349158, -9.586478, -7....</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1491</td>\n",
+       "      <td>[-332.87567, 149.99313, -36.90327, 33.533695, ...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1492</td>\n",
+       "      <td>[-503.34763, 173.59569, -21.291695, 31.144808,...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1493</td>\n",
+       "      <td>[-420.78137, 144.98412, -45.337044, 14.3555155...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1494</td>\n",
+       "      <td>[-489.23328, 122.28847, -52.489998, 8.501058, ...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1495</td>\n",
+       "      <td>[-283.6206, 182.47198, -46.0279, 14.188629, -2...</td>\n",
+       "      <td>siren</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1496 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                feature class_label\n",
+       "0     [-395.19397, 143.10742, 18.418566, 1.2344542, ...    dog_bark\n",
+       "1     [-409.3987, 85.58972, 18.60112, -1.9504186, -2...    dog_bark\n",
+       "2     [-208.6443, 85.23191, -41.25806, 15.916695, -3...    dog_bark\n",
+       "3     [-391.55826, 74.2019, -64.09721, -19.767124, 1...    dog_bark\n",
+       "4     [-659.502, 58.18304, -9.349158, -9.586478, -7....    dog_bark\n",
+       "...                                                 ...         ...\n",
+       "1491  [-332.87567, 149.99313, -36.90327, 33.533695, ...       siren\n",
+       "1492  [-503.34763, 173.59569, -21.291695, 31.144808,...       siren\n",
+       "1493  [-420.78137, 144.98412, -45.337044, 14.3555155...       siren\n",
+       "1494  [-489.23328, 122.28847, -52.489998, 8.501058, ...       siren\n",
+       "1495  [-283.6206, 182.47198, -46.0279, 14.188629, -2...       siren\n",
+       "\n",
+       "[1496 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Send temp features to features df\n",
+    "featuresdf = features_temp\n",
+    "display(featuresdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['dog_bark', 'dog_bark', 'dog_bark', ..., 'siren', 'siren', 'siren'],\n",
+       "      dtype='<U8')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [1., 0., 0., 0.]], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Use sklearn.preprocessing.LabelEncoder to encode the categorical text data into model-understandable numerical data\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from keras.utils import to_categorical\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Convert features and corresponding classification labels into numpy arrays\n",
     "X = np.array(featuresdf.feature.tolist())\n",
@@ -220,7 +538,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(yy[0])\n",
+    "\n",
+    "#for i in yy:\n",
+    " #   print(i)\n",
+    "  #  if i == [1., 0., 0., 0]\n",
+    "   #     print(\"woo\")\n",
+    "    #Xdog\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,12 +564,14 @@
     "\n",
     "# X is feature, Y is labels\n",
     "# 42 is the seed to generating random numbers - starting position, integer required to ensure training and testing are consistent\n",
-    "x_train, x_test, y_train, y_test = train_test_split(X, yy, test_size=0.2, random_state=42)\n"
+    "#x_train, x_test, y_train, y_test = train_test_split(X, yy, test_size=0.2, random_state=42)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, yy, test_size=0.1, random_state=42)\n",
+    "#print(x_train, x_test, y_train, y_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
